--- a/docker/Dockerfile_fastapi
+++ b/docker/Dockerfile_fastapi
@@ -14,7 +14,7 @@ RUN apt-get update && apt-get install -y \
 # test si la version du projet a changé
 #ADD https://api.github.com/repos/Slimanee/Itineraire-de-Vacances/git/refs/heads/main version.json
 
-RUN git clone https://github.com/Slimanee/Itineraire-de-Vacances.git .
+RUN git clone -b main https://github.com/Slimanee/Itineraire-de-Vacances.git .
 
 RUN pip3 install -r requirements.txt
 
