--- a/docker/Dockerfile_streamlit
+++ b/docker/Dockerfile_streamlit
@@ -12,9 +12,11 @@ RUN apt-get update && apt-get install -y \
     && rm -rf /var/lib/apt/lists/*
 
 # test si la version du projet a changé
-# ADD https://api.github.com/repos/Slimanee/Itineraire-de-Vacances/git/refs/heads/main version.json
+ADD https://api.github.com/repos/Slimanee/Itineraire-de-Vacances/git/refs/heads/main version.json
 
-RUN git clone -b main https://github.com/Slimanee/Itineraire-de-Vacances.git .
+RUN git clone https://github.com/Slimanee/Itineraire-de-Vacances.git
+
+WORKDIR /app/Itineraire-de-Vacances/
 
 RUN pip3 install -r requirements.txt
 
